styles/style.css
* {
  box-sizing: border-box;
}

html {
  font-size: 10px;
}

body {
  background-color: #011627;
  color: #FDFFFC;
  overflow-x: hidden!important;
  width: 100%;
  -webkit-font-smoothing: antialiased;
}

h1 {
  font-size: 4rem;
  font-family: "montserrat", sans-serif;
  font-weight: bold;
  letter-spacing: .3rem;
}

h2 {
  font-size: 3.4rem;
  font-family: "montserrat", sans-serif;
  letter-spacing: .3rem;
  line-height: 4.2rem;
}

h3 {
  font-size: 2.8rem;
  font-family: "montserrat", sans-serif;
  letter-spacing: .3rem;
  line-height: 3.6rem;
}

h4 {
  font-size: 2rem;
  font-family: "montserrat", sans-serif;
  font-weight: lighter;
}

h5 {
  font-size: 2.4rem;
  font-family: "source sans pro", sans-serif;
  letter-spacing: .2rem;
  line-height: 3rem;
}

p, a, li {
  font-size: 2rem;
  font-family: "source sans pro", sans-serif;
  line-height: 2.8rem;
}

.center {
  display: flex;
  justify-content: center;
}

.center-title {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.text-center {
  text-align: center;
}

.title-background {
  position: relative;
  text-align: center;
}

.centerli {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.fullscrn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 90vh;
  margin: auto 2rem;
}

.halfscrn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 40rem;
  margin: auto 2rem;
}

.long-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto 2rem;
}

.light {
  color: #FDFFFC;
}

.dark {
  color: #011627;
}

.botmargsml {
  margin-bottom: 2rem;
}

.botmargmed {
  margin-bottom: 5rem;
}

.botmarglrg {
  margin-bottom: 10rem;
}

.topmarglrg {
  margin-top: 10rem;
}

.margins {
  margin: 10rem 2rem 0 2rem;
}

.topnbotmarg {
  margin: 10rem auto;
}

.halfscrntop {
  margin-top: 40rem;
}

.halfscrnbot {
  margin-bottom: 50vh;
}

/* Bounce animation for icons*/
@keyframes bounce {
  0% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  50% {
    -webkit-transform: translateY(-6px);
    transform: translateY(-6px);
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

header {
  background-color: #011627;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 8.8rem;
}

.container {
  position: relative;
}

.my-logo {
  cursor: pointer;
  margin-left: 3rem;
  transition: 1s;
}

.my-logo:hover {
  -webkit-transform: rotate(90deg);
  transform: rotate(90deg);
}

.menu {
  display: block;
  cursor: pointer;
  margin-right: 3rem;
}

.menu:hover .line1 {
  width: 2.6rem;
}

.menu:hover .line2 {
  width: 2.6rem;
}

.menu:hover .line3 {
  width: 2.6rem;
}

.menu div {
  background-color: #FDFFFC;
  border-radius: .1rem;
  height: .2rem;
  margin: .7rem 0;
  transition: all 0.4s ease;
}

.line1 {
  width: 2.6rem;
}

.line2 {
  width: 1.4rem;
}

.line3 {
  width: 2rem;
}

.menu-items {
  background-color: #011627;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
  position: absolute;
  right: 0rem;
  top: 8.8rem;
  height: 60vh;
  width: 100%;
  transform: translateX(100%);
  transition: transform 0.5s ease-in;
}

.menu-items li {
  list-style: none;
  opacity: 0;
}


.menu-items a {
  color: #FDFFFC;
  font-size: 2.4rem;
  letter-spacing: .2rem;
  text-decoration: none;
}

.menu-items li a::after {
  position: absolute;
  background: #FDFFFC;
  content: '';
  width: 100%;
  height: .2rem;
  top: 100%;
  left: 0;
  transition: transform 0.5s;
  transform: scaleX(0);
  transform-origin: right;
}

.menu-items li a:hover::after {
  transform: scaleX(1);
  transform-origin: left;
}

.menu-active {
  transform: translateX(0%);
}

@keyframes menuItemFade {
  from {
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

.toggle .line1 {
  width: 2.5rem;
  transform: rotate(-45deg) translate(-5px, 6px);
  -webkit-transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
  opacity: 0;
}

.toggle .line3 {
  width: 2.5rem;
  transform: rotate(45deg) translate(-6px, -7px);
  -webkit-transform: rotate(45deg) translate(-6px, -7px);
}

main {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
}

.intro {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 80vh;
}

.intro h1 {
  margin-bottom: .8rem;
}

input[type=radio] {
  display: none;
}

.mvart-link a {
  cursor: pointer;
  color: #FDFFFC;
  font-style: none;
  text-decoration: none;
  transition: 1s;
}

.mvart-link a:hover {
  font-style: italic;
}

.card {
  position: absolute;
  width: 60%;
  height: auto;
  left: 0;
  right: 0;
  margin: auto;
  transition: transform .4s ease;
  cursor: pointer;
}

.carousel {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  height: 40%;
  width: 100%;
  max-width: 600px;
}

.cards {
  position: relative;
  height: 100%;
  width: 100%;
}

.carousel img {
  width: 100%;
  height: auto;
  border-radius: .3rem;
  object-fit: cover;
  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
}

#item-1:checked ~ .cards #demo-5, #item-2:checked ~ .cards #demo-1, #item-3:checked ~ .cards #demo-2, #item-4:checked ~ .cards #demo-3, #item-5:checked ~ .cards #demo-4 {
  transform: translatex(-40%) scale(.8);
  z-index: 1;
}

#item-1:checked ~ .cards #demo-2, #item-2:checked ~ .cards #demo-3, #item-3:checked ~ .cards #demo-4, #item-4:checked ~ .cards #demo-5, #item-5:checked ~ .cards #demo-1 {
  transform: translatex(40%) scale(.8);
  z-index: 1;
}

#item-1:checked ~ .cards #demo-1, #item-2:checked ~ .cards #demo-2, #item-3:checked ~ .cards #demo-3, #item-4:checked ~ .cards #demo-4, #item-5:checked ~ .cards #demo-5 {
  transform: translatex(0) scale(1);
  z-index: 2;
}
/* ... */

